apps/persistent-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: story-service
spec:
  selector:
    app: story
  ports:
    - protocol: 'TCP'
      port: 8080
      targetPort: 3000
  type: LoadBalancer
