apps/persistent-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: story-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: story.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: story-service
                port:
                  number: 8080
